[project]
name = "thoughtful"
version = "0.1.0"
description = ""
authors = [
    {name = "Jeff Taylor",email = "yourname@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.42.0,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "openai (>=1.62.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
